# mik-sdk

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  codecov.yml  deny.toml  release-please-config.json  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  manual-release.yml  quality.yml  release.yml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs-dev/adr/: 003-two-component-architecture.md
docs/src/content/docs/: architecture.mdx  index.mdx
examples/: README.md
examples/auth-api/: Cargo.toml
examples/auth-api/src/: bindings.rs  lib.rs
examples/auth-api/wit/: world.wit
examples/crud-api/: Cargo.toml  README.md  openapi.json  spin.toml
examples/crud-api/src/: bindings.rs  lib.rs
examples/crud-api/wit/: world.wit
examples/deploy-github/: .gitignore  Cargo.toml  README.md  build.sh  setup.sh
examples/deploy-github/.github/workflows/: deploy.yml
examples/deploy-github/src/: lib.rs
examples/deploy-github/wit/: world.wit
examples/external-api/: Cargo.toml
examples/external-api/src/: bindings.rs  lib.rs
examples/external-api/wit/: world.wit
examples/hello-world/: Cargo.toml  README.md  mik.toml  spin.toml
examples/hello-world/src/: bindings.rs  lib.rs
examples/hello-world/tests/: openapi_e2e_test.rs
examples/hello-world/wit/: world.wit
examples/resilient-api/: Cargo.toml
examples/resilient-api/src/: bindings.rs  lib.rs
examples/resilient-api/wit/: world.wit
mik-bridge/: Cargo.toml  compose.wac
mik-bridge/src/: bindings.rs  lib.rs
mik-bridge/wit/: bridge.wit
mik-sdk/: CHANGELOG.md  Cargo.toml  README.md
mik-sdk-macros/: CHANGELOG.md  Cargo.toml  README.md
mik-sdk-macros/src/: derive.rs  dx.rs  errors.rs  http_client.rs  ids.rs  json.rs  lib.rs  response.rs  schema.rs
mik-sdk-macros/src/derive/: mod.rs  path_derive.rs  query_derive.rs  type_derive.rs
mik-sdk-macros/src/openapi/: routes.rs  utoipa.rs
mik-sdk-macros/src/schema/: codegen.rs  field_schema.rs  mod.rs  openapi.rs  type_schema.rs  types.rs
mik-sdk-macros/tests/: dx_macros_test.rs  edge_cases_test.rs  expand.rs  fetch_macro_test.rs  hygiene_test.rs  ids_macro_test.rs  json_macro_test.rs  macro_expansion_test.rs  openapi_validation_test.rs  route_matching.rs  routes_integration_test.rs  schema_macro_test.rs  ui.rs
mik-sdk-macros/tests/expand/: fetch_get.expanded.rs  fetch_get.rs  fetch_post_json.expanded.rs  fetch_post_json.rs  json_basic.expanded.rs  json_basic.rs  json_nested.expanded.rs  json_nested.rs  routes_basic.expanded.rs
mik-sdk/benches/: json.rs  parsing.rs  request.rs
mik-sdk/fuzz/: Cargo.toml
mik-sdk/fuzz/fuzz_targets/: json_parse.rs  request.rs  url_decode.rs
mik-sdk/src/: constants.rs  env.rs  json.rs  lib.rs  log.rs  random.rs  time.rs  typed.rs  wasi_http.rs
mik-sdk/src/http_client/: error.rs  mod.rs  request.rs  response.rs  ssrf.rs
mik-sdk/src/json/: lazy.rs  mod.rs  tests.rs  to_json.rs  value.rs
mik-sdk/src/request/: cookie.rs  mod.rs  multipart.rs  parsing.rs  tests.rs
mik-sdk/src/typed/: mod.rs  parse_error.rs  validation_error.rs
mik-sdk/tests/: proptest_request.proptest-regressions  proptest_request.rs  proptest_roundtrip.rs
mik-sdk/tests/common/: mod.rs
mik-sdk/wit/: world.wit
mik-sql/: CHANGELOG.md  Cargo.toml  README.md
mik-sql-macros/: CHANGELOG.md  Cargo.toml  README.md
mik-sql-macros/src/: common.rs  create.rs  delete.rs  errors.rs  lib.rs  read.rs  update.rs
mik-sql-macros/src/parse/: aggregate.rs  common.rs  compute.rs  filter.rs  mod.rs
mik-sql-macros/src/read/: input.rs
mik-sql-macros/tests/: ui.rs
mik-sql/benches/: sql_builder.rs
mik-sql/src/: builder.rs  dialect.rs  lib.rs  pagination.rs  validate.rs
mik-sql/src/builder/: delete.rs  insert.rs  mod.rs  parse.rs  select.rs  types.rs  update.rs
mik-sql/src/pagination/: cursor.rs  encoding.rs  keyset.rs  mod.rs  page_info.rs  value_conv.rs
mik-sql/src/validate/: filter.rs  mod.rs
mik-sql/tests/: builder_coverage.rs  proptest_sql.rs  snapshots_sql.rs  sql_macro_test.rs  sqlite_integration.rs
mik-sql/tests/snapshots/: snapshots_sql__cursor_multi_field.snap  snapshots_sql__cursor_single_field.snap  snapshots_sql__filter_gt.snap  snapshots_sql__filter_like.snap  snapshots_sql__filter_ne.snap  snapshots_sql__select_simple.snap  snapshots_sql__select_with_filter.snap  snapshots_sql__select_with_pagination.snap  snapshots_sql__select_with_sort.snap  snapshots_sql__sqlite_select.snap
mik-wit/handler/: handler.wit
scripts/: coverage.ps1  coverage.sh  setup-hooks.sh
tests-integration/: Cargo.toml
tests-integration/fixtures/: spin-external-api.toml  spin.toml
tests-integration/tests/: wasm_component.rs  wasm_e2e.rs
(+118 files in other folders)
